<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Yann le sac a foutre</string>
    <string name="button_send">Send</string>
    <string name="title_activity_login">Sign in</string>

    <!-- ************************ -->
    <!-- Strings related to login -->
    <!-- ************************ -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_length_password">6 characters minimum</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Not registered ? Sign up now</string>

    <!-- ******************************** -->
    <!-- Strings related to main Activity -->
    <!-- ******************************** -->
    <string name="main_record">Calculate ambiant sound</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_drawer">UserDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>