<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.melchor.boozenoise.activities.signUpActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200px"
            android:src="@drawable/boozenoise_logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign up to get started !"
            android:textAlignment="center"
            android:textSize="40px"
            android:textColor="@android:color/white"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40px"
            android:padding="10px"
            android:background="@drawable/edittext_border"
            android:textColor="@android:color/white"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="10px"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/prompt_password"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/error_length_password"
            android:text="@string/error_length_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/sign_up"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="signUp"
            android:background="@color/colorButton"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

</RelativeLayout>
